perf(s20): precompile Citadel hot-path frames