@@ -2,6 +2,7 @@ package io.github.r3neer.scalebrews.collision.pose;
 
 import io.github.r3neer.scalebrews.collision.api.spi.PoseEngine;
 import io.github.r3neer.scalebrews.collision.geometry.ModelGeometry;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -17,6 +18,24 @@ public final class CitadelPoseProgramEvaluator {
         Optional<Map<String, Matrix4f>> evaluate(PoseEngine.Inputs inputs);
     }
 
+    private record CompiledFrame(boolean stationary, CitadelPoseProgram.Delta[] previous,
+                                 CitadelPoseProgram.Delta[] current) {}
+
+    /** Immutable bind-time index. No keyframe map/materialization occurs in HOT_TICK. */
+    private record CompiledClip(int[] ends, CompiledFrame[] frames) {
+        int frameAt(int tick) {
+            if (tick < 0 || ends.length == 0 || tick >= ends[ends.length - 1]) return -1;
+            int low = 0, high = ends.length - 1;
+            while (low < high) {
+                int mid = (low + high) >>> 1;
+                if (tick < ends[mid]) high = mid;
+                else low = mid + 1;
+            }
+            return low;
+        }
+        int start(int index) { return index == 0 ? 0 : ends[index - 1]; }
+    }
+
     public static Optional<Bound> bind(ModelGeometry geometry, CitadelPoseProgram program) {
         if (geometry == null || program == null
                 || !geometry.source().equals(program.source()) || !geometry.version().equals(program.version()))
@@ -28,11 +47,33 @@ public final class CitadelPoseProgramEvaluator {
         }
         if (!validateBones(program, rest)) return Optional.empty();
 
-        var clips = new LinkedHashMap<Integer, CitadelPoseProgram.Clip>();
-        for (var clip : program.clips()) clips.put(clip.animation(), clip);
+        Map<Integer, CompiledClip> clips;
+        try { clips = compileClips(program); }
+        catch (RuntimeException invalid) { return Optional.empty(); }
         Map<String, ModelGeometry.SourcePose> immutableRest = Map.copyOf(rest);
-        Map<Integer, CitadelPoseProgram.Clip> immutableClips = Map.copyOf(clips);
+        Map<Integer, CompiledClip> immutableClips = Map.copyOf(clips);
         return Optional.of(inputs -> evaluate(immutableRest, immutableClips, program, inputs));
+    }
+
+    private static Map<Integer, CompiledClip> compileClips(CitadelPoseProgram program) {
+        var result = new LinkedHashMap<Integer, CompiledClip>();
+        for (var clip : program.clips()) {
+            int size = clip.keyframes().size();
+            int[] ends = new int[size];
+            CompiledFrame[] frames = new CompiledFrame[size];
+            CitadelPoseProgram.Delta[] previous = new CitadelPoseProgram.Delta[0];
+            int end = 0;
+            for (int index = 0; index < size; index++) {
+                var frame = clip.keyframes().get(index);
+                end = Math.addExact(end, frame.durationTicks());
+                ends[index] = end;
+                var current = frame.deltas().toArray(CitadelPoseProgram.Delta[]::new);
+                frames[index] = new CompiledFrame(frame.stationary(), previous, current);
+                if (!frame.stationary()) previous = current;
+            }
+            result.put(clip.animation(), new CompiledClip(ends, frames));
+        }
+        return result;
     }
 
     private static boolean validateBones(CitadelPoseProgram program, Map<String, ModelGeometry.SourcePose> rest) {
@@ -56,7 +97,7 @@ public final class CitadelPoseProgramEvaluator {
     }
 
     private static Optional<Map<String, Matrix4f>> evaluate(Map<String, ModelGeometry.SourcePose> rest,
-                                                             Map<Integer, CitadelPoseProgram.Clip> clips,
+                                                             Map<Integer, CompiledClip> clips,
                                                              CitadelPoseProgram program,
                                                              PoseEngine.Inputs inputs) {
         if (inputs == null) return Optional.empty();
@@ -67,17 +108,17 @@ public final class CitadelPoseProgramEvaluator {
             if (!applyOperation(rest, operation, inputs, poses)) return Optional.empty();
         }
 
-        var result = new LinkedHashMap<String, Matrix4f>();
+        var result = new LinkedHashMap<String, Matrix4f>(poses.size());
         for (var entry : poses.entrySet()) {
             var pose = entry.getValue();
             if (!pose.valid()) return Optional.empty();
             result.put(entry.getKey(), pose.matrix());
         }
-        return Optional.of(Map.copyOf(result));
+        return Optional.of(Collections.unmodifiableMap(result));
     }
 
     private static boolean applyClip(Map<String, ModelGeometry.SourcePose> rest,
-                                     Map<Integer, CitadelPoseProgram.Clip> clips,
+                                     Map<Integer, CompiledClip> clips,
                                      PoseEngine.Inputs inputs,
                                      Map<String, MutablePose> poses) {
         if (clips.isEmpty()) return true;
@@ -94,44 +135,25 @@ public final class CitadelPoseProgramEvaluator {
             ? inputs.channel(CitadelPoseProgram.ANIMATION_PARTIAL_CHANNEL, Float.NaN) : 0;
         if (!Float.isFinite(partial) || partial < 0 || partial >= 1) return false;
 
-        Map<String, CitadelPoseProgram.Delta> previous = Map.of();
-        int start = 0;
-        for (var frame : clip.keyframes()) {
-            int end;
-            try { end = Math.addExact(start, frame.durationTicks()); }
-            catch (ArithmeticException invalid) { return false; }
-            Map<String, CitadelPoseProgram.Delta> current = deltas(frame);
-            if (tick >= start && tick < end) {
-                if (frame.stationary()) {
-                    applyDeltas(rest, poses, previous, 1);
-                } else {
-                    float fraction = (tick - start + partial) / frame.durationTicks();
-                    float inc = Mth.sin((float) (fraction * Math.PI / 2.0));
-                    float dec = 1.0f - inc;
-                    applyDeltas(rest, poses, previous, dec);
-                    applyDeltas(rest, poses, current, inc);
-                }
-                return poses.values().stream().allMatch(MutablePose::valid);
-            }
-            if (!frame.stationary()) previous = current;
-            start = end;
-        }
-        // ModelAnimator contributes no keyframe transform once the animation tick is outside all frames.
-        return true;
+        int index = clip.frameAt(tick);
+        if (index < 0) return true; // ModelAnimator contributes nothing after the clip endpoint.
+        var frame = clip.frames()[index];
+        if (frame.stationary()) return applyDeltas(rest, poses, frame.previous(), 1);
+
+        int start = clip.start(index);
+        float fraction = (tick - start + partial) / (clip.ends()[index] - start);
+        float inc = Mth.sin((float) (fraction * Math.PI / 2.0));
+        float dec = 1.0f - inc;
+        return applyDeltas(rest, poses, frame.previous(), dec)
+            && applyDeltas(rest, poses, frame.current(), inc);
     }
 
-    private static Map<String, CitadelPoseProgram.Delta> deltas(CitadelPoseProgram.Keyframe frame) {
-        var result = new LinkedHashMap<String, CitadelPoseProgram.Delta>();
-        for (var delta : frame.deltas()) result.put(delta.bone(), delta);
-        return Map.copyOf(result);
-    }
-
-    private static void applyDeltas(Map<String, ModelGeometry.SourcePose> rest,
-                                    Map<String, MutablePose> poses,
-                                    Map<String, CitadelPoseProgram.Delta> deltas,
-                                    float factor) {
-        if (factor == 0) return;
-        for (var delta : deltas.values()) {
+    private static boolean applyDeltas(Map<String, ModelGeometry.SourcePose> rest,
+                                       Map<String, MutablePose> poses,
+                                       CitadelPoseProgram.Delta[] deltas,
+                                       float factor) {
+        if (factor == 0) return true;
+        for (var delta : deltas) {
             var pose = pose(rest, poses, delta.bone());
             pose.xRot += factor * delta.rotX();
             pose.yRot += factor * delta.rotY();
@@ -139,7 +161,9 @@ public final class CitadelPoseProgramEvaluator {
             pose.x += factor * delta.posX();
             pose.y += factor * delta.posY();
             pose.z += factor * delta.posZ();
+            if (!pose.valid()) return false;
         }
+        return true;
     }
 
     private static boolean applyOperation(Map<String, ModelGeometry.SourcePose> rest,
@@ -152,18 +176,21 @@ public final class CitadelPoseProgramEvaluator {
                 pose.xRot += scalar(operation.x(), inputs);
                 pose.yRot += scalar(operation.y(), inputs);
                 pose.zRot += scalar(operation.z(), inputs);
+                return pose.valid();
             }
             case ADD_POSITION -> {
                 var pose = pose(rest, poses, operation.bone());
                 pose.x += scalar(operation.x(), inputs);
                 pose.y += scalar(operation.y(), inputs);
                 pose.z += scalar(operation.z(), inputs);
+                return pose.valid();
             }
             case SET_SCALE -> {
                 var pose = pose(rest, poses, operation.bone());
                 pose.xScale = scalar(operation.x(), inputs);
                 pose.yScale = scalar(operation.y(), inputs);
                 pose.zScale = scalar(operation.z(), inputs);
+                return pose.valid();
             }
             case WALK, SWING, FLAP -> {
                 float clock = scalar(operation.clock(), inputs);
@@ -175,13 +202,16 @@ public final class CitadelPoseProgramEvaluator {
                 if (operation.type() == CitadelPoseProgram.OperationType.WALK) pose.xRot += value;
                 else if (operation.type() == CitadelPoseProgram.OperationType.SWING) pose.yRot += value;
                 else pose.zRot += value;
+                return pose.valid();
             }
             case BOB -> {
                 float clock = scalar(operation.clock(), inputs);
                 float amount = scalar(operation.amount(), inputs);
                 float value = Mth.cos(clock * operation.speed()) * operation.degree() * amount;
                 if (operation.bounce()) value = -Math.abs(value);
-                pose(rest, poses, operation.bone()).y += value;
+                var pose = pose(rest, poses, operation.bone());
+                pose.y += value;
+                return pose.valid();
             }
             case FACE_TARGET -> {
                 float yaw = inputs.headYaw() * Mth.DEG_TO_RAD / operation.divisor();
@@ -190,7 +220,9 @@ public final class CitadelPoseProgramEvaluator {
                     var pose = pose(rest, poses, bone);
                     pose.yRot += yaw;
                     pose.xRot += pitch;
+                    if (!pose.valid()) return false;
                 }
+                return true;
             }
             case PROGRESS_ROTATION -> {
                 var base = rest.get(operation.bone());
@@ -199,6 +231,7 @@ public final class CitadelPoseProgramEvaluator {
                 pose.xRot += progress * (scalar(operation.x(), inputs) - base.xRot());
                 pose.yRot += progress * (scalar(operation.y(), inputs) - base.yRot());
                 pose.zRot += progress * (scalar(operation.z(), inputs) - base.zRot());
+                return pose.valid();
             }
             case PROGRESS_POSITION -> {
                 var base = rest.get(operation.bone());
@@ -207,9 +240,10 @@ public final class CitadelPoseProgramEvaluator {
                 pose.x += progress * (scalar(operation.x(), inputs) - base.x());
                 pose.y += progress * (scalar(operation.y(), inputs) - base.y());
                 pose.z += progress * (scalar(operation.z(), inputs) - base.z());
+                return pose.valid();
             }
         }
-        return poses.values().stream().allMatch(MutablePose::valid);
+        return false;
     }
 
     private static boolean condition(CitadelPoseProgram.Condition condition, PoseEngine.Inputs inputs) {
@@ -222,9 +256,19 @@ public final class CitadelPoseProgramEvaluator {
             case LT -> inputs.channel(condition.channel(), Float.NaN) < condition.threshold();
             case LE -> inputs.channel(condition.channel(), Float.NaN) <= condition.threshold();
             case EQ -> Float.compare(inputs.channel(condition.channel(), Float.NaN), condition.threshold()) == 0;
-            case ALL -> condition.terms().stream().allMatch(term -> condition(term, inputs));
-            case ANY -> condition.terms().stream().anyMatch(term -> condition(term, inputs));
+            case ALL -> all(condition, inputs);
+            case ANY -> any(condition, inputs);
         };
+    }
+
+    private static boolean all(CitadelPoseProgram.Condition condition, PoseEngine.Inputs inputs) {
+        for (var term : condition.terms()) if (!condition(term, inputs)) return false;
+        return true;
+    }
+
+    private static boolean any(CitadelPoseProgram.Condition condition, PoseEngine.Inputs inputs) {
+        for (var term : condition.terms()) if (condition(term, inputs)) return true;
+        return false;
     }
 
     private static float scalar(CitadelPoseProgram.Scalar scalar, PoseEngine.Inputs inputs) {
@@ -242,7 +286,11 @@ public final class CitadelPoseProgramEvaluator {
 
     private static MutablePose pose(Map<String, ModelGeometry.SourcePose> rest,
                                     Map<String, MutablePose> poses, String bone) {
-        return poses.computeIfAbsent(bone, ignored -> new MutablePose(rest.get(bone)));
+        var existing = poses.get(bone);
+        if (existing != null) return existing;
+        var created = new MutablePose(rest.get(bone));
+        poses.put(bone, created);
+        return created;
     }
 
     private static boolean integral(float value) {
